--- a/AilianBT/Views/MusicView.xaml
+++ b/AilianBT/Views/MusicView.xaml
@@ -3,9 +3,8 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:converters="using:AilianBT.Converters"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="using:AilianBT.Views"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:models="using:AilianBT.Common.Models"
+      xmlns:models="using:AilianBT.Models"
       mc:Ignorable="d">
     <Page.Resources>
         <converters:BoolToVisibityConverter x:Key="FalseToVisibility" Inverse="True" />
